[package]
name = "turbo_rozwalka_3000"
version = "0.1.0"
authors = ["bulengerkacper <bulenger.kacper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.28"
nalgebra = "0.23"
rand = "0.7"
ncollide3d = "0.23"
quit = "1.1.2"
